# duckdb-extension-pcap

./: .gitmodules  Cargo.toml  Makefile  README.md  test.pcap
.github/workflows/: MainDistributionPipeline.yml
src/: lib.rs
test/sql/: pcap_reader.test
