[package]
name = "pcap_reader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "pcap_reader"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.1.1", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.3"
libduckdb-sys = { version = "1.1.1", features = ["loadable-extension"] }
pcap-parser = "0.16.0"
hex = "0.4"
ureq = { version = "2.12.1", default-features = false, features = ["tls","native-certs"] }

[target.'cfg(all(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }
