[package]
name = "pcap_reader"
version = "0.1.3"
edition = "2021"

[lib]
crate-type = ["cdylib"]
# crate-type = ["staticlib", "cdylib"]

[profile.release]
lto = true
strip = true

[[example]]
# crate-type can't be (at the moment) be overriden for specific targets
# src/wasm_lib.rs forwards to src/lib.rs so that we can change from cdylib
# (that is needed while compiling natively) to staticlib (needed since the
# actual linking will be done via emcc
name = "pcap_reader"
path = "src/wasm_lib.rs"
crate-type = ["staticlib"]

[dependencies]
duckdb = { version = "1.3.0", features = ["vtab-loadable"] }
duckdb-loadable-macros = "0.1.5"
libduckdb-sys = { version = "1.3.0", features = ["loadable-extension"] }
pcap-parser = "0.16.0"
hex = "0.4"
ehttp = "0.5.0"
